# CrossWatch

./: .dockerignore  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Config.md  Developer_Guide.md  Dockerfile  LICENSE  README.md  SECURITY.md  SUMMARY.md  Scrobbler.md  _FastAPI.py  _analyzer.py  _authentication.py  _authenticationAPI.py  _configAPI.py  _editor.py  _editorAPI.py  _export.py  _insightAPI.py  _logging.py  _maintenanceAPI.py  _metaAPI.py  _probesAPI.py  _scheduling.py  _schedulingAPI.py  _scrobbleAPI.py  _statistics.py  _syncAPI.py  _versionAPI.py  _wallAPI.py  _watchlist.py  _watchlistAPI.py  crosswatch.py  dev.MD  docker-compose.yml  index.html  mkdocs.yml  (+8 more)
.github/: FUNDING.yml  pull_request_template.md
api/: __init__.py  animeMappingAPI.py  appAuthAPI.py  authenticationAPI.py  backupsAPI.py  configAPI.py  dashboardAPI.py  editorAPI.py  eventsAPI.py  insightAPI.py  maintenanceAPI.py  manualAPI.py  metaAPI.py  mobileAPI.py  playlistsAPI.py  probesAPI.py  providerInstancesAPI.py  provider_guard.py  schedulingAPI.py  scrobbleAPI.py  scrobblerManagementAPI.py  snapshotsAPI.py  syncAPI.py  tlsAPI.py  versionAPI.py  wallAPI.py  watchlistAPI.py
assets/: auth.jellyfin.js  auth.plex-simkl.js  auth.trakt.js  client-formatter.js  connections.overlay.js  connections.pairs.overlay.js  crossover.js  crosswatch.css  crosswatch.js  insights.js  main.js  manifest.webmanifest  modals.js  schedularbanner.js  scheduler.js  scrobbler.js  (+4 more)
src-tauri/: Cargo.toml  config.json  tauri.conf.json
src-tauri/resources/: config.json
src-tauri/src/: main.rs
(+444 files in other folders)
