[package]
name = "crosswatch_tauri"
version = "0.3.0"
description = "CrossWatch (Tauri v2)"
authors = ["cenodude"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-opener = "2.2.3"
tauri-plugin-shell = "2.2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tiny_http = "0.12"
anyhow = "1"
thiserror = "1"
directories = "5"
chrono = { version = "0.4", features = ["clock"] }
url = "2.5"
urlencoding = "2.1"
rand = "0.8"
